2000-05-15  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* added _FTS before #ifdef pp-commands in all header files

2000-05-09  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* fts/src/runtime/client/incoming.c: fixed memory corruption bug

2000-05-04  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* packages/ispw/src/data/table.c: added save as .pat
	
	* packages/qlist/c/src/qlist.c: added save as .pat

	* added overwrite confirmation dialog in patcher "Save as" in case file already exists.

2000-05-03  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* sigthrow: fixed bug in catch~/throw~

2000-05-03  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fts: fixing 'save as .pat' methods (messages were not saved correctly)

2000-05-02  Francois Dechelle  <dechelle@lipari.ircam.fr>

	*  fts: added stuff for running fts under purify (ENABLE_PURIFY=yes on make command 
	line). See doc/running.html for further indications.

2000-04-28  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* fork object added in packages/guiobj java/.../patcher/objects java/.../fts
	* for object added in packages/control
	* range moved from packages/numeric to packages/control
	* vec object added in packages/data
	* eliminated MAXVS and MINVS in the kernel and packages
	* sched.h: added functions (makros)
	    fts_get_time_in_msecs()
	    fts_get_time_in_ticks()
	    fts_get_tick_size()
	    fts_get_tick_duration()
	* sched.h: added constants
	    FTS_MIN_TICK_SIZE
	    FTS_MAX_TICK_SIZE
	    FTS_DEF_TICK_SIZE

2000-04-27  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* Merged all ChangeLog files in subdirectories.

	* fts and java Makefiles: merged all install-noarch and install-arch targets

	* moved and cleaned the rpm and sgi package building scripts

2000-04-07  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* java: changed files names for too long names (MacOS porting)

2000-04-05  Norbert Schnell  <schnell@ircam.fr>
