@@ -29,11 +29,12 @@
  * 
  */
 
-#if (defined(IRIX6_4) || defined(IRIX6_5))
 #include <sched.h>
-#else
-#include <sys/schedctl.h>
-#endif
+/* For sysmp(2) function */
+#include <sys/types.h>
+#include <sys/sysmp.h>
+#include <sys/sysinfo.h>
+#include <sys/pda.h>
 #include <errno.h>
 
 /* (fd) HACK !!! */
@@ -50,50 +51,69 @@ static int running_real_time = 0;
    Arguments: none
    Returns: none
 */
-#if (defined(IRIX6_4) || defined(IRIX6_5))
 
-void fts_real_time_on()
+static void run_real_time_scheduling( void)
 {
   struct sched_param param;
   
   /* raise priority to a high value */
   param.sched_priority  = 199;
 
-  if (sched_setscheduler( 0, SCHED_FIFO, &param) >= 0)
+  if (sched_setscheduler( 0, SCHED_FIFO, &param) < 0)
     {
-      running_real_time = 1;
-
-      /* Iff we are running real time, lock to physical memory, if we can */
-      
-      if ( !fts_lock_memory() )
-	{
-	  post("Cannot lock memory: %s\n", strerror (errno));
-	}
+      post( "Warning: cannot switch to real-time scheduling mode. \n");
+      post( "         Real-time performance will be degraded resulting in audio clicks.\n");
+      post( "         This warning result from installation problems (jMax server not owned by root).\n");
+      return;
     }
-  else
+  running_real_time = 1;
+
+  /* Iff we are running real time, lock to physical memory, if we can */
+  if ( !fts_lock_memory() )
     {
-      /* Message ? */
+      post("Warning: cannot lock memory (error \"%s\")\n", strerror (errno));
     }
 }
 
-#else
+/*
+ * Returns: -1 if an error occured, 
+ *           0 if no isolated processor was found,
+ *           1 if isolated processor was found and process succeeded in requesting to run on it
+ */
+static int run_on_isolated_cpu( void)
+{
+  struct pda_stat *p;
+  int n_processors, n;
+
+  n_processors = sysmp( MP_NPROCS);
+  if ( n_processors < 0)
+    return -1;
+
+  p = (struct pda_stat *)malloc( n_processors * sizeof( struct pda_stat));
+  if ( sysmp( MP_STAT, p) < 0)
+    return -1;
+
+  for ( n = 0; n < n_processors; n++)
+    {
+      if (p[n].p_flags & PDAF_ISOLATED)
+	{
+	  if (sysmp( MP_MUSTRUN, n) < 0)
+	    return -1;
+
+	  post( "Running on isolated processor %d\n", n);
+
+	  return 1;
+	}
+    }
+
+  return 0;
+}
 
 void fts_real_time_on()
 {
-  if (schedctl( NDPRI,  0,  NDPNORMMAX) >= 0)
-    {
-      running_real_time = 1;
-
-      /* Lock to physical memory, if we can */
-
-      if ( !fts_lock_memory() )
-	{
-	  post( "Cannot lock memory: %s\n", strerror (errno));
-	}
-    }
+  run_real_time_scheduling();
+  run_on_isolated_cpu();
 }
-
-#endif
 
 /*
    Function: fts_real_time_off
